--- a/examples/2d_grid_transposed.tex
+++ b/examples/2d_grid_transposed.tex
@@ -1,6 +1,4 @@
 
-   % do something for single-level
-
 
 % The table needs the following to be defined in the preamble:
 %   
@@ -19,6 +17,9 @@
   &  \multicolumn{1}{c}{$ \np{9.43e-2} $}
   &  \multicolumn{1}{c}{$ \np{960} $}
   \\
+\cmidrule(lr){3-3}
+\cmidrule(lr){4-4}
+\cmidrule(lr){5-5}
 
 % header row 1
 \multicolumn{2}{l}{$ h $}
@@ -26,6 +27,9 @@
   &  \multicolumn{1}{c}{$ \np{4.71e-2} $}
   &  \multicolumn{1}{c}{$ \np{3720} $}
   \\
+\cmidrule(lr){3-3}
+\cmidrule(lr){4-4}
+\cmidrule(lr){5-5}
 
 % header row 2
 \multicolumn{2}{l}{{'level': 0, 'text': '$ N_{dof} $', 'col_span': 1}}
