--- a/examples/2d_grid.tex
+++ b/examples/2d_grid.tex
@@ -1,7 +1,7 @@
 
 
 % The table needs the following to be defined in the preamble:
-%   
+%
 %   \usepackage{booktabs}
 %   \usepackage{multirow}
 %   \usepackage{adjustbox}
@@ -14,147 +14,38 @@
 % header row 0
 \multicolumn{1}{c}{}
   &  \multicolumn{1}{c}{$ N_x $}
-  &  \multicolumn{1}{c}{$ h $}
-  &  \multicolumn{1}{c}{{'level': 0, 'text': '$ N_{dof} $', 'col_span': 1}}
-  &  \multicolumn{1}{c}{{'level': 0, 'text': '$ \\tau~[\\textup{s}] $', 'col_span': 1}}
-  &  \multicolumn{1}{c}{{'level': 0, 'text': '$ \\lVert E_{h,S_n} \\rVert_1 $', 'col_span': 1}}
-  &  \multicolumn{1}{c}{{'level': 0, 'text': '$ eoc_{S_n,1} $', 'col_span': 1}}
-  &  \multicolumn{1}{c}{{'level': 0, 'text': '$ \\lVert E_{h,S_n} \\rVert_2 $', 'col_span': 1}}
-  &  \multicolumn{1}{c}{{'level': 0, 'text': '$ eoc_{S_n,2} $', 'col_span': 1}}
+  &  \multicolumn{1}{c}{$ h~[\textup{m}] $}
+  &  \multicolumn{1}{c}{$ N_{dof} $}
+  &  \multicolumn{1}{c}{$ \tau~[\textup{s}] $}
+  &  \multicolumn{1}{c}{$ \lVert E_{h,S_n} \rVert_1 $}
+  &  \multicolumn{1}{c}{$ eoc_{S_n,1} $}
+  &  \multicolumn{1}{c}{$ \lVert E_{h,S_n} \rVert_2 $}
+  &  \multicolumn{1}{c}{$ eoc_{S_n,2} $}
   \\
 
 \midrule
 
-{'level': 0, 'text': '{\\footnotesize Brooks \\& Corey}', 'col_span': 1}  &  {'level': 0, 'text': '{\\footnotesize Brooks \\& Corey}', 'col_span': 1}  &  {'level': 0, 'text': '{\\footnotesize Brooks \\& Corey}', 'col_span': 1}  &  {'level': 0, 'text': '{\\footnotesize Brooks \\& Corey}', 'col_span': 1}  &  {'level': 0, 'text': '{\\footnotesize Brooks \\& Corey}', 'col_span': 1}  &  {'level': 0, 'text': '{\\footnotesize van Genuchten}', 'col_span': 1}  &  {'level': 0, 'text': '{\\footnotesize van Genuchten}', 'col_span': 1}  &  {'level': 0, 'text': '{\\footnotesize van Genuchten}', 'col_span': 1}  &  {'level': 0, 'text': '{\\footnotesize van Genuchten}', 'col_span': 1}  &  {'level': 0, 'text': '{\\footnotesize van Genuchten}', 'col_span': 1}  &  
-
-\np{253.16}  &  
-\np{1.52e-2}  &  
-  &  
-\np{3.26e-2}  &  
- \\
-$ \np{15} $  &  $ \np{30} $  &  $ \np{60} $  &  $ \np{120} $  &  $ \np{240} $  &  $ \np{15} $  &  $ \np{30} $  &  $ \np{60} $  &  $ \np{120} $  &  $ \np{240} $  &  
-
-\np{90.50}  &  
-\np{8.75e-3}  &  
-\raisebox{1.5ex}[0ex][0ex]{\bf \np{0.80}}  &  
-\np{2.08e-2}  &  
-\raisebox{1.5ex}[0ex][0ex]{\bf \np{0.65}} \\
-$ \np{9.43e-2} $  &  $ \np{4.71e-2} $  &  $ \np{2.36e-2} $  &  $ \np{1.18e-2} $  &  $ \np{5.89e-3} $  &  $ \np{9.43e-2} $  &  $ \np{4.71e-2} $  &  $ \np{2.36e-2} $  &  $ \np{1.18e-2} $  &  $ \np{5.89e-3} $  &  
-
-\np{31.90}  &  
-\np{4.97e-3}  &  
-\raisebox{1.5ex}[0ex][0ex]{\bf \np{0.82}}  &  
-\np{1.35e-2}  &  
-\raisebox{1.5ex}[0ex][0ex]{\bf \np{0.62}} \\
-$ \np{960} $  &  $ \np{3720} $  &  $ \np{14640} $  &  $ \np{58080} $  &  $ \np{231360} $  &  $ \np{960} $  &  $ \np{3720} $  &  $ \np{14640} $  &  $ \np{58080} $  &  $ \np{231360} $  &  
-
-\np{10.62}  &  
-\np{2.76e-3}  &  
-\raisebox{1.5ex}[0ex][0ex]{\bf \np{0.85}}  &  
-\np{8.93e-3}  &  
-\raisebox{1.5ex}[0ex][0ex]{\bf \np{0.60}} \\
-
-    % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{3.57}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{1.51e-3}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\raisebox{1.5ex}[0ex][0ex]{\bf \np{0.87}}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{5.79e-3}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\raisebox{1.5ex}[0ex][0ex]{\bf \np{0.63}} \\
-
-    % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{317.00}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{1.41e-2}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\raisebox{1.5ex}[0ex][0ex]{\bf }  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{2.17e-2}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\raisebox{1.5ex}[0ex][0ex]{\bf } \\
-
-    % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{80.00}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{7.88e-3}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\raisebox{1.5ex}[0ex][0ex]{\bf \np{0.84}}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{1.24e-2}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\raisebox{1.5ex}[0ex][0ex]{\bf \np{0.81}} \\
-
-    % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{19.96}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{4.31e-3}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\raisebox{1.5ex}[0ex][0ex]{\bf \np{0.87}}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{6.83e-3}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\raisebox{1.5ex}[0ex][0ex]{\bf \np{0.86}} \\
-
-    % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{5.02}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{2.34e-3}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\raisebox{1.5ex}[0ex][0ex]{\bf \np{0.88}}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{3.72e-3}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\raisebox{1.5ex}[0ex][0ex]{\bf \np{0.88}} \\
-
-    % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{1.26}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{1.29e-3}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\raisebox{1.5ex}[0ex][0ex]{\bf \np{0.86}}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{2.06e-3}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\raisebox{1.5ex}[0ex][0ex]{\bf \np{0.85}} \\
+\multirow{5}{*}{\rotatebox[origin=c]{90}{{\footnotesize Brooks \& Corey}}}  &  $ \np{15} $  &  $ \np{9.43e-2} $  &  $ \np{960} $  &  
+\np{253.16}  &  \np{1.52e-2}  &    &  \np{3.26e-2}  &   \\
+  &  $ \np{30} $  &  $ \np{4.71e-2} $  &  $ \np{3720} $  &  
+\np{90.50}  &  \np{8.75e-3}  &  \raisebox{1.5ex}[0ex][0ex]{\bf \np{0.80}}  &  \np{2.08e-2}  &  \raisebox{1.5ex}[0ex][0ex]{\bf \np{0.65}} \\
+  &  $ \np{60} $  &  $ \np{2.36e-2} $  &  $ \np{14640} $  &  
+\np{31.90}  &  \np{4.97e-3}  &  \raisebox{1.5ex}[0ex][0ex]{\bf \np{0.82}}  &  \np{1.35e-2}  &  \raisebox{1.5ex}[0ex][0ex]{\bf \np{0.62}} \\
+  &  $ \np{120} $  &  $ \np{1.18e-2} $  &  $ \np{58080} $  &  
+\np{10.62}  &  \np{2.76e-3}  &  \raisebox{1.5ex}[0ex][0ex]{\bf \np{0.85}}  &  \np{8.93e-3}  &  \raisebox{1.5ex}[0ex][0ex]{\bf \np{0.60}} \\
+  &  $ \np{240} $  &  $ \np{5.89e-3} $  &  $ \np{231360} $  &  
+\np{3.57}  &  \np{1.51e-3}  &  \raisebox{1.5ex}[0ex][0ex]{\bf \np{0.87}}  &  \np{5.79e-3}  &  \raisebox{1.5ex}[0ex][0ex]{\bf \np{0.63}} \\
+            \cline{1-9}\noalign{\smallskip}
+\multirow{5}{*}{\rotatebox[origin=c]{90}{{\footnotesize van Genuchten}}}  &  $ \np{15} $  &  $ \np{9.43e-2} $  &  $ \np{960} $  &  
+\np{317.00}  &  \np{1.41e-2}  &  \raisebox{1.5ex}[0ex][0ex]{\bf }  &  \np{2.17e-2}  &  \raisebox{1.5ex}[0ex][0ex]{\bf } \\
+  &  $ \np{30} $  &  $ \np{4.71e-2} $  &  $ \np{3720} $  &  
+\np{80.00}  &  \np{7.88e-3}  &  \raisebox{1.5ex}[0ex][0ex]{\bf \np{0.84}}  &  \np{1.24e-2}  &  \raisebox{1.5ex}[0ex][0ex]{\bf \np{0.81}} \\
+  &  $ \np{60} $  &  $ \np{2.36e-2} $  &  $ \np{14640} $  &  
+\np{19.96}  &  \np{4.31e-3}  &  \raisebox{1.5ex}[0ex][0ex]{\bf \np{0.87}}  &  \np{6.83e-3}  &  \raisebox{1.5ex}[0ex][0ex]{\bf \np{0.86}} \\
+  &  $ \np{120} $  &  $ \np{1.18e-2} $  &  $ \np{58080} $  &  
+\np{5.02}  &  \np{2.34e-3}  &  \raisebox{1.5ex}[0ex][0ex]{\bf \np{0.88}}  &  \np{3.72e-3}  &  \raisebox{1.5ex}[0ex][0ex]{\bf \np{0.88}} \\
+  &  $ \np{240} $  &  $ \np{5.89e-3} $  &  $ \np{231360} $  &  
+\np{1.26}  &  \np{1.29e-3}  &  \raisebox{1.5ex}[0ex][0ex]{\bf \np{0.86}}  &  \np{2.06e-3}  &  \raisebox{1.5ex}[0ex][0ex]{\bf \np{0.85}} \\
 
 \bottomrule
 \end{tabular}
