--- a/examples/2d_grid_transposed.tex
+++ b/examples/2d_grid_transposed.tex
@@ -1,7 +1,7 @@
 
 
 % The table needs the following to be defined in the preamble:
-%   
+%
 %   \usepackage{booktabs}
 %   \usepackage{multirow}
 %   \usepackage{adjustbox}
@@ -14,182 +14,53 @@
 % header row 0
 \multicolumn{2}{l}{$ N_x $}
   &  \multicolumn{1}{c}{$ \np{15} $}
-  &  \multicolumn{1}{c}{$ \np{9.43e-2} $}
-  &  \multicolumn{1}{c}{$ \np{960} $}
+  &  \multicolumn{1}{c}{$ \np{30} $}
+  &  \multicolumn{1}{c}{$ \np{60} $}
+  &  \multicolumn{1}{c}{$ \np{120} $}
+  &  \multicolumn{1}{c}{$ \np{240} $}
   \\
-\cmidrule(lr){3-3}
-\cmidrule(lr){4-4}
-\cmidrule(lr){5-5}
 
 % header row 1
-\multicolumn{2}{l}{$ h $}
-  &  \multicolumn{1}{c}{$ \np{30} $}
+\multicolumn{2}{l}{$ h~[\textup{m}] $}
+  &  \multicolumn{1}{c}{$ \np{9.43e-2} $}
   &  \multicolumn{1}{c}{$ \np{4.71e-2} $}
-  &  \multicolumn{1}{c}{$ \np{3720} $}
+  &  \multicolumn{1}{c}{$ \np{2.36e-2} $}
+  &  \multicolumn{1}{c}{$ \np{1.18e-2} $}
+  &  \multicolumn{1}{c}{$ \np{5.89e-3} $}
   \\
-\cmidrule(lr){3-3}
-\cmidrule(lr){4-4}
-\cmidrule(lr){5-5}
 
 % header row 2
-\multicolumn{2}{l}{{'level': 0, 'text': '$ N_{dof} $', 'col_span': 1}}
-  &  \multicolumn{1}{c}{$ \np{60} $}
-  &  \multicolumn{1}{c}{$ \np{2.36e-2} $}
+\multicolumn{2}{l}{$ N_{dof} $}
+  &  \multicolumn{1}{c}{$ \np{960} $}
+  &  \multicolumn{1}{c}{$ \np{3720} $}
   &  \multicolumn{1}{c}{$ \np{14640} $}
+  &  \multicolumn{1}{c}{$ \np{58080} $}
+  &  \multicolumn{1}{c}{$ \np{231360} $}
   \\
 
 \midrule
 
-{'level': 0, 'text': '{\\footnotesize Brooks \\& Corey}', 'col_span': 1}  &  {'level': 0, 'text': '{\\footnotesize Brooks \\& Corey}', 'col_span': 1}  &  {'level': 0, 'text': '{\\footnotesize Brooks \\& Corey}', 'col_span': 1}  &  {'level': 0, 'text': '{\\footnotesize Brooks \\& Corey}', 'col_span': 1}  &  {'level': 0, 'text': '{\\footnotesize Brooks \\& Corey}', 'col_span': 1}  &  {'level': 0, 'text': '{\\footnotesize van Genuchten}', 'col_span': 1}  &  {'level': 0, 'text': '{\\footnotesize van Genuchten}', 'col_span': 1}  &  {'level': 0, 'text': '{\\footnotesize van Genuchten}', 'col_span': 1}  &  {'level': 0, 'text': '{\\footnotesize van Genuchten}', 'col_span': 1}  &  {'level': 0, 'text': '{\\footnotesize van Genuchten}', 'col_span': 1}  &  
-
-\np{253.16}  &  
-\np{90.50}  &  
-\np{31.90}  &  
-\np{10.62}  &  
-\np{3.57} \\
-{'level': 0, 'text': '$ \\tau~[\\textup{s}] $', 'col_span': 1}  &  {'level': 0, 'text': '$ \\lVert E_{h,S_n} \\rVert_1 $', 'col_span': 1}  &  {'level': 0, 'text': '$ eoc_{S_n,1} $', 'col_span': 1}  &  {'level': 0, 'text': '$ \\lVert E_{h,S_n} \\rVert_2 $', 'col_span': 1}  &  {'level': 0, 'text': '$ eoc_{S_n,2} $', 'col_span': 1}  &  {'level': 0, 'text': '$ \\tau~[\\textup{s}] $', 'col_span': 1}  &  {'level': 0, 'text': '$ \\lVert E_{h,S_n} \\rVert_1 $', 'col_span': 1}  &  {'level': 0, 'text': '$ eoc_{S_n,1} $', 'col_span': 1}  &  {'level': 0, 'text': '$ \\lVert E_{h,S_n} \\rVert_2 $', 'col_span': 1}  &  {'level': 0, 'text': '$ eoc_{S_n,2} $', 'col_span': 1}  &  
-
-
-\hfill\stackinset{c}{}{b}{}{\bf \np{0.01}}{}  &  
-\hfill\stackinset{c}{}{b}{}{\bf \np{0.00}}{}  &  
-\hfill\stackinset{c}{}{b}{}{\bf \np{0.00}}{}  &  
-\hfill\stackinset{c}{}{b}{}{\bf \np{0.00}}{}  &   \\
-
-    % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-nan  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{0.80}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{0.82}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{0.85}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{0.87} \\
-
-    % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{3.26e-2}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{2.08e-2}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{1.35e-2}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{8.93e-3}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{5.79e-3} \\
-
-    % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-nan  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{0.65}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{0.62}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{0.60}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{0.63} \\
-
-    % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{317.00}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{80.00}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{19.96}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{5.02}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{1.26} \\
-
-    % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{1.41e-2}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{7.88e-3}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{4.31e-3}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{2.34e-3}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{1.29e-3} \\
-
-    % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-nan  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{0.84}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{0.87}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{0.88}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{0.86} \\
-
-    % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{2.17e-2}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{1.24e-2}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{6.83e-3}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{3.72e-3}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{2.06e-3} \\
-
-    % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-nan  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{0.81}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{0.86}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{0.88}  &      % The template tried to access an index beyond the length of sparse_index.
-    % For single-level indexes, or extra rows, you can handle them here:
-
-\np{0.85} \\
+\multirow{5}{*}{\rotatebox[origin=c]{90}{{\footnotesize Brooks \& Corey}}}  &  $ \tau~[\textup{s}] $  &  
+\np{253.16}  &  \np{90.50}  &  \np{31.90}  &  \np{10.62}  &  \np{3.57} \\
+  &  $ \lVert E_{h,S_n} \rVert_1 $  &  
+\np{1.52e-2}  &  \np{8.75e-3}  &  \np{4.97e-3}  &  \np{2.76e-3}  &  \np{1.51e-3} \\
+  &  $ eoc_{S_n,1} $  &  
+\hfill\stackinset{c}{}{b}{}{\bf \np{0.80}}{}  &  \hfill\stackinset{c}{}{b}{}{\bf \np{0.82}}{}  &  \hfill\stackinset{c}{}{b}{}{\bf \np{0.85}}{}  &  \hfill\stackinset{c}{}{b}{}{\bf \np{0.87}}{}  &   \\
+  &  $ \lVert E_{h,S_n} \rVert_2 $  &  
+\np{3.26e-2}  &  \np{2.08e-2}  &  \np{1.35e-2}  &  \np{8.93e-3}  &  \np{5.79e-3} \\
+  &  $ eoc_{S_n,2} $  &  
+\hfill\stackinset{c}{}{b}{}{\bf \np{0.65}}{}  &  \hfill\stackinset{c}{}{b}{}{\bf \np{0.62}}{}  &  \hfill\stackinset{c}{}{b}{}{\bf \np{0.60}}{}  &  \hfill\stackinset{c}{}{b}{}{\bf \np{0.63}}{}  &   \\
+            \cline{1-7}\noalign{\smallskip}
+\multirow{5}{*}{\rotatebox[origin=c]{90}{{\footnotesize van Genuchten}}}  &  $ \tau~[\textup{s}] $  &  
+\np{317.00}  &  \np{80.00}  &  \np{19.96}  &  \np{5.02}  &  \np{1.26} \\
+  &  $ \lVert E_{h,S_n} \rVert_1 $  &  
+\np{1.41e-2}  &  \np{7.88e-3}  &  \np{4.31e-3}  &  \np{2.34e-3}  &  \np{1.29e-3} \\
+  &  $ eoc_{S_n,1} $  &  
+\hfill\stackinset{c}{}{b}{}{\bf \np{0.84}}{}  &  \hfill\stackinset{c}{}{b}{}{\bf \np{0.87}}{}  &  \hfill\stackinset{c}{}{b}{}{\bf \np{0.88}}{}  &  \hfill\stackinset{c}{}{b}{}{\bf \np{0.86}}{}  &   \\
+  &  $ \lVert E_{h,S_n} \rVert_2 $  &  
+\np{2.17e-2}  &  \np{1.24e-2}  &  \np{6.83e-3}  &  \np{3.72e-3}  &  \np{2.06e-3} \\
+  &  $ eoc_{S_n,2} $  &  
+\hfill\stackinset{c}{}{b}{}{\bf \np{0.81}}{}  &  \hfill\stackinset{c}{}{b}{}{\bf \np{0.86}}{}  &  \hfill\stackinset{c}{}{b}{}{\bf \np{0.88}}{}  &  \hfill\stackinset{c}{}{b}{}{\bf \np{0.85}}{}  &   \\
 
 \bottomrule
 \end{tabular}
