--- a/examples/2d_grid_transposed.tex
+++ b/examples/2d_grid_transposed.tex
@@ -19,6 +19,9 @@
   &  \multicolumn{1}{c}{$ \np{120} $}
   &  \multicolumn{1}{c}{$ \np{240} $}
   \\
+\cmidrule(lr){3-3}
+\cmidrule(lr){4-4}
+\cmidrule(lr){5-5}
 
 % header row 1
 \multicolumn{2}{l}{$ h~[\textup{m}] $}
@@ -28,6 +31,9 @@
   &  \multicolumn{1}{c}{$ \np{1.18e-2} $}
   &  \multicolumn{1}{c}{$ \np{5.89e-3} $}
   \\
+\cmidrule(lr){3-3}
+\cmidrule(lr){4-4}
+\cmidrule(lr){5-5}
 
 % header row 2
 \multicolumn{2}{l}{$ N_{dof} $}
